# wsj-stock-downloader

./: .gitignore  LICENSE  README.md  download.py  multiprocess_getter.py  pyproject.toml  returns.py
src/wsj_stock_downloader/: __init__.py  cli.py  downloader.py  returns.py  tickers.py  workflow.py
tests/: test_returns.py  test_tickers.py
tickers/: example_stock_group_2.txt  example_stock_list_1.txt
