[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wsj-stock-downloader"
version = "0.1.0"
description = "Small library and CLI for downloading WSJ historical CSVs and computing returns."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "mi94" }
]
dependencies = [
  "pandas>=2.0,<3.0",
]

[project.scripts]
wsj-stock-downloader = "wsj_stock_downloader.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
